<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/pagetitle"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/main1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/main2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/main3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/main4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/main5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/main6"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/main7"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ImageView
                android:layout_marginTop="50dp"
                android:layout_width="180dp"
                android:layout_height="300dp"
                android:src="@drawable/boy2"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:text="@string/binscount"
            android:textAlignment="center"
            android:textSize="26dp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"/>

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
