<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/pagetitle"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="60dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/alarm1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/alarm2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/alarm3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/alarm4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/alarm5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/alarm6"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <ImageView
                android:layout_marginTop="50dp"
                android:layout_width="180dp"
                android:layout_height="300dp"
                android:src="@drawable/boy2"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/red"
            android:text="Yes"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/noBtn"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@color/red"
            android:fontFamily="serif"
            android:text="No thanks"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>
