<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight=".5">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:text="@string/pagetitle"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="50dp" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center_horizontal"
                    android:text="@string/bin"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/binNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="40dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center_horizontal"
                    android:text="How offen does the bin"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center_horizontal"
                    android:text="go out?"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="250dp"
                android:src="@drawable/boy2"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="3">

        <Button
            android:id="@+id/weeklyBtn"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/red"
            android:fontFamily="serif"
            android:text="@string/week1"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/twoweeklyBtn"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/red"
            android:fontFamily="serif"
            android:text="@string/week2"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/threeweeklyBtn"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/red"
            android:fontFamily="serif"
            android:text="@string/week3"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fourweeklyBtn"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/red"
            android:fontFamily="serif"
            android:text="@string/week4"
            android:textSize="30sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/backBtn"
            android:background="@drawable/back_arrow"
            android:layout_marginTop="20dp"
            android:layout_width="140dp"
            android:layout_height="70dp"/>
    </LinearLayout>

</LinearLayout>
